--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
       <div class="meter-fill" id="meterFill"></div>
     </div>
     <div id="strengthText">Neutral</div>
-    <h3>Last Signals</h3>
+    <h3>Sell<-------------------->Buy</h3>
     <ul id="tradeLog"></ul>
   </div>
 
