--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
     <div class="meter-background">
       <div class="meter-fill" id="meterFill"></div>
     </div>
-    <div id="strengthText">Neutral</div>
-    <h3>Sell<-------------------->Buy</h3>
+    <h3>Sell                            Buy</h3>
     <ul id="tradeLog"></ul>
   </div>
 
