--- a/index.html
+++ b/index.html
@@ -168,8 +168,9 @@
     <h2>Trade Signal</h2>
     <div class="meter-background">
       <div class="meter-fill" id="meterFill"></div>
-    </div>
-    <h3>Sell                            Buy</h3>
+   <div class="signal-header">
+  <span class="sell">Sell</span>
+  <span class="buy">Buy</span>
     <ul id="tradeLog"></ul>
   </div>
 
