--- a/index.html
+++ b/index.html
@@ -168,9 +168,7 @@
     <h2>Trade Signal</h2>
     <div class="meter-background">
       <div class="meter-fill" id="meterFill"></div>
-   <div class="signal-header">
-  <span class="sell">Sell</span>
-  <span class="buy">Buy</span>
+      <h3>Sell------------------------Buy</h3>
     <ul id="tradeLog"></ul>
   </div>
 
