--- a/index.html
+++ b/index.html
@@ -168,7 +168,9 @@
     <h2>Trade Signal</h2>
     <div class="meter-background">
       <div class="meter-fill" id="meterFill"></div>
-      <h3>Sell------------------------Buy</h3>
+    </div>
+    <div id="strengthText">Neutral</div>
+    <h3>Last Signals</h3>
     <ul id="tradeLog"></ul>
   </div>
 
